# ds-tuner

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  ds-tuner.service  ds-tuner.toml  dsmod.service  dsmod.toml
bpf/: dualsense.bpf.c  dualsense.h  vmlinux.h
pkg/: PKGBUILD  service.install
src/: bpf.rs  cli.rs  conf.rs  device.rs  dualsense.rs  ffi.rs  input.rs  instance.rs  main.rs  service.rs
src/bpf/: dualsense.bpf.c  dualsense.h  hid_bpf.h  hid_bpf_helpers.h
src/input/: mod.rs  options.rs  stick.rs  trigger.rs  util.rs
