[package]
name = "dsmod"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.0"
glam = "0.30.0"
log = "0.4.27"
simplelog = "0.12.2"
systemd-journal-logger = "2.2.2"

[dependencies.serde]
version = "1.0.0"
features = ["derive"]

[dependencies.toml]
version = "0.8.22"
default-features = false
features = ["parse"]

[dependencies.udev]
version = "0.9.3"
features = ["mio"]

[dependencies.libbpf-rs]
git = "https://github.com/libbpf/libbpf-rs.git"
rev = "ee1e39fc90f9011e522a689555ae47144ee0f8e9"

[build-dependencies.libbpf-cargo]
git = "https://github.com/libbpf/libbpf-rs.git"
rev = "ee1e39fc90f9011e522a689555ae47144ee0f8e9"
