[package]
name = "ds-tuner"
version = "0.1.0"
edition = "2024"
description = "DualSense controller raw input modifier"

[features]
default = ["dep:simplelog"]
systemd = ["dep:systemd-journal-logger"]

[dependencies]
anyhow = "1.0.0"
# Config
serde = { version = "1.0.0", features = ["derive"] }
toml = { version = "0.8.22", default-features = false, features = ["parse"] }
# Logging
log = { version = "0.4.27", features = ["release_max_level_info"] }
systemd-journal-logger = { version = "2.2.2", optional = true }
simplelog = { version = "0.12.2", optional = true }
# Monitors
inotify = { version = "0.11.0", default-features = false }
udev = { version = "0.9.3", features = ["mio"] }
# Input
glam = "0.30.0"

[dependencies.libbpf-rs]
git = "https://github.com/libbpf/libbpf-rs.git"
rev = "3ed13c8cb0f441584ee392e5c19aacb55b71ad12"
default-features = false

[build-dependencies.libbpf-cargo]
git = "https://github.com/libbpf/libbpf-rs.git"
rev = "3ed13c8cb0f441584ee392e5c19aacb55b71ad12"

[profile.release]
codegen-units = 1
opt-level = "s"
strip = true
lto = true
