[package]
name = "ds-tuner"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/AmionSky/ds-tuner"
description = "DualSense controller raw input modifier"
categories = ["command-line-utilities"]

[features]
default = []
systemd = ["dep:systemd-journal-logger"]

[dependencies]
anyhow = "1.0.0"
libc = "0.2"
# CLI
clap = { version = "4.5.39", features = ["derive"] }
# Config
serde = { version = "1.0.0", features = ["derive"] }
toml = { version = "0.8.22", default-features = false, features = ["parse"] }
# Logging
log = { version = "0.4.27", features = ["release_max_level_debug"] }
systemd-journal-logger = { version = "2.2.2", optional = true }
simplelog = "0.12.2"
# Monitors
inotify = { version = "0.11.0", default-features = false }
udev = { version = "0.9.3", features = ["mio"] }
# Input
glam = "0.30.0"

[dependencies.libbpf-rs]
version = "0.25.0"
default-features = false

[build-dependencies]
libbpf-cargo = "0.25.0"

[profile.release]
codegen-units = 1
opt-level = "s"
strip = true
lto = true
